--- a/test/unit-test/Makefile_win_gcc.in
+++ b/test/unit-test/Makefile_win_gcc.in
@@ -1,4 +1,4 @@
-LDFLAGS += -L. -lm -lcmocka
+LDFLAGS += -L. -lm
 CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow -Wno-sign-compare -Wconversion
 
 ########################################################################
