--- a/test/integration-test/Makefile.in
+++ b/test/integration-test/Makefile.in
@@ -17,7 +17,7 @@ CCFLAGS = -g -ggdb -std=c89 -pedantic -Wall -Wextra -Wstrict-prototypes -Wshadow
 
 ########################################################################
 ## Toplevel targets
-all: test_coco test_instance_extraction test_biobj test_bbob-constrained test_bbob-mixint
+all: test_coco test_instance_extraction test_biobj test_bbob-constrained test_bbob-largescale test_bbob-mixint
 
 clean:
 	rm -f coco.o  
@@ -25,6 +25,7 @@ clean:
 	rm -f test_instance_extraction.o test_instance_extraction  
 	rm -f test_biobj.o test_biobj  
 	rm -f test_bbob-constrained.o test_bbob-constrained  
+	rm -f test_bbob-largescale.o test_bbob-largescale  
 	rm -f test_bbob-mixint.o test_bbob-mixint
 
 ########################################################################
@@ -41,6 +42,9 @@ test_biobj: test_biobj.o coco.o
 test_bbob-constrained: test_bbob-constrained.o coco.o
 	${CC} ${CCFLAGS} -o test_bbob-constrained coco.o test_bbob-constrained.o ${LDFLAGS}  
 
+test_bbob-largescale: test_bbob-largescale.o coco.o
+	${CC} ${CCFLAGS} -o test_bbob-largescale coco.o test_bbob-largescale.o ${LDFLAGS}  
+
 test_bbob-mixint: test_bbob-mixint.o
 	${CC} ${CCFLAGS} -o test_bbob-mixint test_bbob-mixint.o ${LDFLAGS}
 
@@ -56,5 +60,7 @@ test_biobj.o: coco.h coco.c test_biobj.c
 	${CC} -c ${CCFLAGS} -o test_biobj.o test_biobj.c
 test_bbob-constrained.o: coco.h coco.c test_bbob-constrained.c
 	${CC} -c ${CCFLAGS} -o test_bbob-constrained.o test_bbob-constrained.c
+test_bbob-largescale.o: coco.h coco.c test_bbob-largescale.c
+	${CC} -c ${CCFLAGS} -o test_bbob-largescale.o test_bbob-largescale.c
 test_bbob-mixint.o: test_bbob-mixint.c
 	${CC} -c ${CCFLAGS} -o test_bbob-mixint.o test_bbob-mixint.c
