[core] Add unit tests for tainted problems

--- a/test/unit-test/CMakeLists.txt
+++ b/test/unit-test/CMakeLists.txt
@@ -28,6 +28,21 @@ macro(minunit_test name)
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 endmacro()
 
+add_executable(test_tainted_problem test_tainted_problem.c coco.c)
+if (LIBM)
+  target_link_libraries(test_tainted_problem PUBLIC ${LIBM})
+endif()
+if (LIBRT)
+  target_link_libraries(test_tainted_problem PUBLIC ${LIBRT})
+endif()
+
+add_test(NAME test_tainted-bbob COMMAND $<TARGET_FILE:test_tainted_problem> bbob)
+set_property(TEST test_tainted-bbob PROPERTY WILL_FAIL YES)
+add_test(NAME test_tainted-bbob-largescale COMMAND $<TARGET_FILE:test_tainted_problem> bbob-largescale)
+set_property(TEST test_tainted-bbob-largescale PROPERTY WILL_FAIL YES)
+add_test(NAME test_tainted-bbob-biobj COMMAND $<TARGET_FILE:test_tainted_problem> bbob-biobj)
+set_property(TEST test_tainted-bbob-biobj PROPERTY WILL_FAIL NO)
+
 minunit_test(test_biobj_utilities)
 minunit_test(test_brentq)
 minunit_test(test_coco_archive)
