Fixed the bbob logger tests

--- a/test/unit-test/CMakeLists.txt
+++ b/test/unit-test/CMakeLists.txt
@@ -50,5 +50,6 @@ minunit_test(test_coco_observer)
 minunit_test(test_coco_problem)
 minunit_test(test_coco_string)
 minunit_test(test_coco_utilities)
+minunit_test(test_logger_bbob)
 minunit_test(test_logger_biobj)
 minunit_test(test_mo_utilities)
