--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-12, macosx_x86_64]
+          - [macos-14, macosx_x86_64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python: ["cp39", "cp310", "cp311", "cp312", "pp39"]
@@ -132,7 +132,7 @@ jobs:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-12, macosx_x86_64]
+          - [macos-14, macosx_x86_64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python: ["3.9", "3.10", "3.11", "3.12"]
@@ -176,7 +176,7 @@ jobs:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-12, macosx_x86_64]
+          - [macos-14, macosx_x86_64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python: ["3.9", "3.10", "3.11", "3.12"]
@@ -236,7 +236,7 @@ jobs:
         # FIXME: Currently fails on windows because of path issues.
         # 
         # Debug and add `windows-latest` back to list at some point.
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-14]
     runs-on: ${{matrix.os}}
     defaults:
       run:
@@ -269,7 +269,7 @@ jobs:
         # FIXME: Currently fails on windows because of path issues.
         # 
         # Debug and add `windows-latest` back to list at some point.
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-14]
         java: [11, 17, 21] 
     runs-on: ${{matrix.os}}
     defaults:
