--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ test/integration-test/test_instance_extraction
 test/regression-test/data/*
 test/regression-test/bbob_noisy_regression_test/data_legacy/*.json
 test/regression-test/bbob_noisy_regression_test/results
+build/c/.vscode
