--- a/.github/workflows/test_java.yml
+++ b/.github/workflows/test_java.yml
@@ -1,9 +1,7 @@
 name: test-java
 
 on:
-  push:
-  pull_request:
-    branches: [ main ]
+  workflow_call:
     paths:
       - "build/java/*"
       - "src/*"
