--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -1,9 +1,7 @@
 name: test-python
 
 on:
-  push:
-  pull_request:
-    branches: [ main ]
+  workflow_call:
     paths:
       - "build/python/*"
       - "src/*"
