--- a/.github/workflows/test_c.yml
+++ b/.github/workflows/test_c.yml
@@ -1,9 +1,7 @@
 name: test-c
 
 on:
-  push:
-  pull_request:
-    branches: [ main ]
+  workflow_call:
     paths:
       - "build/c/*"
       - "src/*"
