--- a/.github/workflows/test_rust.yml
+++ b/.github/workflows/test_rust.yml
@@ -1,9 +1,7 @@
 name: test-rust
 
 on:
-  push:
-  pull_request:
-    branches: [ main ]
+  workflow_call:
     paths:
       - "build/rust/*"
       - "src/*"
