--- a/.github/workflows/test_c.yml
+++ b/.github/workflows/test_c.yml
@@ -1,10 +1,6 @@
 name: test-c
 
-on:
-  workflow_call:
-    paths:
-      - "build/c/*"
-      - "src/*"
+on: workflow_call
       
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
