--- a/.github/workflows/test_rust.yml
+++ b/.github/workflows/test_rust.yml
@@ -1,10 +1,6 @@
 name: test-rust
 
-on:
-  workflow_call:
-    paths:
-      - "build/rust/*"
-      - "src/*"
+on: workflow_call
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
