--- a/.github/workflows/test_java.yml
+++ b/.github/workflows/test_java.yml
@@ -1,11 +1,6 @@
 name: test-java
 
-on:
-  workflow_call:
-    paths:
-      - "build/java/*"
-      - "src/*"
-      
+on: workflow_call
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
