--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -1,11 +1,6 @@
 name: test-python
 
-on:
-  workflow_call:
-    paths:
-      - "build/python/*"
-      - "src/*"
-      - "test/*"
+on: workflow_call
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
