move checkout so it knows about the actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ jobs:
   source-build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: build
       uses: ./.github/workflows/source_build.yml
     - name: Archive C source package
