--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,7 +122,7 @@ jobs:
     - name: Archive Python wheels
       uses: actions/upload-artifact@v4
       with:
-        name: dist-python-wheels
+        name: dist-python-wheels-${{ matrix.python }}-${{ matrix.buildplat[1] }}
         path: dist/coco_experiment*.whl
   
   python-wheels-test:
@@ -153,7 +153,7 @@ jobs:
         path: dist
     - uses: actions/download-artifact@v4
       with:
-        name: dist-python-wheels
+        name: dist-python-wheels-${{ matrix.python }}-${{ matrix.buildplat[1] }}
         path: wheels
     - uses: actions/setup-python@v5
       with:
@@ -170,7 +170,7 @@ jobs:
         pytest --cov=cocoex test/
   
   python-wheels-example:
-    needs: [python-wheels-build, python-wheels-build]
+    needs: python-wheels-build
     strategy:
       matrix:
         buildplat:
@@ -194,7 +194,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
       with:
-        name: dist-python-wheels
+        name: dist-python-wheels-${{ matrix.python }}-${{ matrix.buildplat[1] }}
         path: wheels
     - uses: actions/setup-python@v5
       with:
@@ -207,6 +207,18 @@ jobs:
       run: python -m pip install scipy
     - name: Run example experiment
       run: python build/python/example/example_experiment2.py
+
+
+  merge-python-wheels:
+    runs-on: ubuntu-latest
+    needs: [python-wheels-test, python-wheels-example]
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: dist-python-wheels
+          pattern: dist-python-wheels-*
+
 
   python-lint:
     needs: source-build
