--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,7 @@ jobs:
   
   python-wheels-test:
     needs: python-wheels-build
+    if: success() || failure()
     strategy:
       matrix:
         buildplat:
@@ -171,6 +172,7 @@ jobs:
   
   python-wheels-example:
     needs: python-wheels-build
+    if: success() || failure()
     strategy:
       matrix:
         buildplat:
@@ -212,6 +214,7 @@ jobs:
   merge-python-wheels:
     runs-on: ubuntu-latest
     needs: [python-wheels-test, python-wheels-example]
+    if: success() || failure()
     steps:
       - name: Merge Artifacts
         uses: actions/upload-artifact/merge@v4
