--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,6 +129,7 @@ jobs:
     needs: python-wheels-build
     if: success() || failure()
     strategy:
+      fail-fast: false
       matrix:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
@@ -174,6 +175,7 @@ jobs:
     needs: python-wheels-build
     if: success() || failure()
     strategy:
+      fail-fast: false
       matrix:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
@@ -221,6 +223,7 @@ jobs:
         with:
           name: dist-python-wheels
           pattern: dist-python-wheels-*
+          delete-merged: true
 
 
   python-lint:
@@ -311,8 +314,21 @@ jobs:
     - name: Archive Java example experiment results
       uses: actions/upload-artifact@v4
       with:
-        name: java-example-${{matrix.os}}
+        name: java-example-${{matrix.os}}-${{matrix.java}}
         path: cocoex-java/exdata/*
+
+  merge-java-examples:
+    runs-on: ubuntu-latest
+    needs: [java-example]
+    if: success() || failure()
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: java-examples
+          pattern: java-example-*
+          delete-merged: true
+
 
   octave-example:
     needs: source-build
@@ -395,3 +411,15 @@ jobs:
       with:
         name: rust-example-${{matrix.os}}
         path: cocoex-rust/exdata/*
+        
+  merge-rust-examples:
+    runs-on: ubuntu-latest
+    needs: [rust-example]
+    if: success() || failure()
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: rust-examples
+          pattern: rust-example-*
+          delete-merged: true
