--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -1,40 +1,13 @@
 name: test-python
 
-on:
-  workflow_run:
-    workflows:
-      - build
-    types:
-      - completed
+  workflow_call:
+    inputs:
+      run-id:
+        required: true
+        type: string
 
 jobs:
 
-  test-job:
-    name: Test Step
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.workflow_run.head_branch }}
-      - run: git branch
-      - run: env
-
-  paths-filter:
-    runs-on: ubuntu-latest
-    outputs:
-      python: ${{ steps.filter.outputs.python }}
-    steps:
-    - uses: actions/checkout@v4
-    - uses: dorny/paths-filter@v3
-      id: filter
-      with:
-        filters: |
-          python:
-            - "build/python/**"
-            - "src/**"
-            - "test/**"
-
-  
   python-wheels-build:
     needs: paths-filter
     if: needs.paths-filter.outputs.python == 'true'
@@ -55,8 +28,8 @@ jobs:
         python:
           - ["cp39", "3.9"]
           - ["cp310", "3.10"]
-          - ["cp311", "3.11"]
-          - ["cp312", "3.12"]
+          - ["cp311", "3.11"],
+          - ["cp312", "3.12"],
           - ["pp39", "pp"]
         exclude:
           # Don't build PyPy 32-bit windows
@@ -82,7 +55,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: dist-python-sdist
-        run-id: ${{ github.event.workflow_run.id }}
+        run-id: ${{ inputs.config-path }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Install cibuildwheel
       run: python -m pip install cibuildwheel==2.16.2
