--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -55,7 +55,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: dist-python-sdist
-        run-id: ${{ inputs.config-path }}
+        run-id: ${{ inputs.run-id }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Install cibuildwheel
       run: python -m pip install cibuildwheel==2.16.2
