--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -1,11 +1,6 @@
 name: test-python
 
-on:
-  workflow_call:
-    inputs:
-      run-id:
-        required: true
-        type: string
+on: workflow_call
 
 jobs:
   python-wheels-build:
@@ -53,8 +48,6 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: dist-python-sdist
-        run-id: ${{ inputs.run-id }}
-        github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Install cibuildwheel
       run: python -m pip install cibuildwheel==2.16.2
     - name: Build cocoex wheel
