Updating the version of upload/download artifacts as it was deprecated (#18)
Changing the version for upload artifact made the artifacts immutable - so adding to the same artifact in matrix jobs started failing. See: https://github.com/actions/upload-artifact/blob/main/docs/MIGRATION.md

So now, I am uploading to separate artifacts with names depending on the matrix. I added additional jobs that grab all the separate artifacts, merge them into a single one, upload that one and delete the separate ones.

--- a/.github/workflows/test_rust.yml
+++ b/.github/workflows/test_rust.yml
@@ -15,7 +15,7 @@ jobs:
         working-directory: ${{github.workspace}}
     steps:
     - name: Download Rust source package
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: dist-rust
     - name: Unpack
@@ -37,7 +37,7 @@ jobs:
         working-directory: ${{github.workspace}}
     steps:
     - name: Download Rust source package
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: dist-rust
     - name: Unpack
@@ -49,7 +49,19 @@ jobs:
       working-directory: ${{github.workspace}}/cocoex-rust/
       run: cargo run --example example-experiment
     - name: Archive Rust example experiment results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: rust-example-${{matrix.os}}
         path: cocoex-rust/exdata/*
+        
+  merge-rust-examples:
+    runs-on: ubuntu-latest
+    needs: [rust-example]
+    if: success() || failure()
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: rust-examples
+          pattern: rust-example-*
+          delete-merged: true
