--- a/.github/workflows/test_java.yml
+++ b/.github/workflows/test_java.yml
@@ -17,7 +17,7 @@ jobs:
         working-directory: ${{github.workspace}}
     steps:
     - name: Download Java source package
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: dist-java
     - name: Setup java
@@ -34,7 +34,19 @@ jobs:
       working-directory: ${{github.workspace}}/cocoex-java/
       run: java -classpath build/coco.jar -Djava.library.path=build/ ExampleExperiment 
     - name: Archive Java example experiment results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: java-example-${{matrix.os}}
+        name: java-example-${{matrix.os}}-${{matrix.java}}
         path: cocoex-java/exdata/*
+        
+  merge-java-examples:
+    runs-on: ubuntu-latest
+    needs: [java-example]
+    if: success() || failure()
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: java-examples
+          pattern: java-example-*
+          delete-merged: true
