--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -3,7 +3,6 @@ name: test-python
 on: workflow_call
 
 jobs:
-  
   python-wheels-build:
     # This strategy is taken straight from the numpy wheels.yaml CI job
     # 
@@ -19,13 +18,18 @@ jobs:
           - [macos-14, macosx_x86_64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
-        python: ["cp39", "cp310", "cp311", "cp312", "pp39"]
+        python:
+          - ["cp39", "3.9"]
+          - ["cp310", "3.10"]
+          - ["cp311", "3.11"]
+          - ["cp312", "3.12"]
+          - ["pp39", "pp"]
         exclude:
           # Don't build PyPy 32-bit windows
           - buildplat: [windows-2019, win32]
-            python: "pp39"
+            python: ["pp39", "pp"]
           - buildplat: [ ubuntu-20.04, musllinux_x86_64 ]
-            python: "pp39"
+            python: ["pp39", "pp"]
     runs-on: ${{ matrix.buildplat[0] }}
     defaults:
       run:
@@ -41,7 +45,7 @@ jobs:
       with:
         python-version: "3.10"
     - name: Download Python source package
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: dist-python-sdist
     - name: Install cibuildwheel
@@ -51,16 +55,18 @@ jobs:
       run: python -m cibuildwheel --output-dir dist/ coco_experiment-*.tar.gz
       env:
         CIBW_PRERELEASE_PYTHONS: True
-        CIBW_BUILD: ${{ matrix.python }}-${{ matrix.buildplat[1] }}
+        CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
     - name: Archive Python wheels
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: dist-python-wheels
+        name: dist-python-wheels-${{ matrix.python[1] }}-${{ matrix.buildplat[1] }}
         path: dist/coco_experiment*.whl
   
   python-wheels-test:
     needs: python-wheels-build
+    if: success() || failure()
     strategy:
+      fail-fast: false
       matrix:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
@@ -80,13 +86,13 @@ jobs:
       run:
         working-directory: ${{github.workspace}}
     steps:
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: dist-python-sdist
         path: dist
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: dist-python-wheels
+        name: dist-python-wheels-${{ matrix.python }}-${{ matrix.buildplat[1] }}
         path: wheels
     - uses: actions/setup-python@v5
       with:
@@ -103,8 +109,10 @@ jobs:
         pytest --cov=cocoex test/
   
   python-wheels-example:
-    needs: [python-wheels-build, python-wheels-build]
+    needs: python-wheels-build
+    if: success() || failure()
     strategy:
+      fail-fast: false
       matrix:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
@@ -125,9 +133,9 @@ jobs:
         working-directory: ${{github.workspace}}
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: dist-python-wheels
+        name: dist-python-wheels-${{ matrix.python }}-${{ matrix.buildplat[1] }}
         path: wheels
     - uses: actions/setup-python@v5
       with:
@@ -141,10 +149,22 @@ jobs:
     - name: Run example experiment
       run: python build/python/example/example_experiment2.py
 
+  merge-python-wheels:
+    runs-on: ubuntu-latest
+    needs: [python-wheels-test, python-wheels-example]
+    if: success() || failure()
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: dist-python-wheels
+          pattern: dist-python-wheels-*
+          delete-merged: true
+
   python-lint:
     runs-on: "ubuntu-latest"
     steps:
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: dist-python-sdist
         path: dist
