--- a/.github/workflows/source_build.yml
+++ b/.github/workflows/source_build.yml
@@ -12,6 +12,9 @@ jobs:
   source-build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v5
       with:
         python-version: "3.10"
@@ -32,8 +35,6 @@ jobs:
         cmake -B build .
         cmake --build build
         ctest --test-dir build
-    - name: Build coco-experiment Python package
-      run: python -m build -s -o dist build/python
     - name: Build coco-experiment Python package
       run: python -m build -s -o dist build/python
     - name: Archive C source package
@@ -67,5 +68,3 @@ jobs:
         name: dist-python-sdist
         path: |
           dist/coco_experiment*.tar.gz
-
- 
