--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -15,6 +15,7 @@ jobs:
     uses: ./.github/workflows/source_build.yml
 
   release:
+    needs: source-build
     runs-on: ubuntu-latest
     steps:
       - name: Download Python source package
