--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -1,6 +1,12 @@
 name: test-python
 
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      build_only:
+        description: "only run wheel builds job"
+        required: false
+        default: 'false'
 
 jobs:
   python-wheels-build:
@@ -64,7 +70,9 @@ jobs:
   
   python-wheels-test:
     needs: python-wheels-build
-    if: success() || failure()
+    if: |
+      ${{ inputs.build_only == 'false' }} &&
+      ( success() || failure() )
     strategy:
       fail-fast: false
       matrix:
@@ -110,7 +118,9 @@ jobs:
   
   python-wheels-example:
     needs: python-wheels-build
-    if: success() || failure()
+    if: |
+      ${{ inputs.build_only == 'false' }} &&
+      ( success() || failure() )
     strategy:
       fail-fast: false
       matrix:
@@ -152,7 +162,7 @@ jobs:
   merge-python-wheels:
     runs-on: ubuntu-latest
     needs: [python-wheels-test, python-wheels-example]
-    if: success() || failure()
+    if: always()
     steps:
       - name: Merge Artifacts
         uses: actions/upload-artifact/merge@v4
@@ -163,6 +173,7 @@ jobs:
 
   python-lint:
     runs-on: "ubuntu-latest"
+    if: ${{ inputs.build_only == 'false' }}
     steps:
     - uses: actions/download-artifact@v4
       with:
