--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -21,7 +21,7 @@ jobs:
       build_only: "true"
 
   release-python:
-    needs: [source-build, python-wheels]
+    needs: python-wheels
     runs-on: ubuntu-latest
     permissions:
       contents: write
