figuring out macos

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
 
   python-test:
     needs: [source-build, paths-filter]
-    if: needs.paths-filter.outputs.python == 'true'
+    if: needs.paths-filter.outputs.python == 'false'
     uses: ./.github/workflows/test_python.yml
 
   c-test:
