--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -59,7 +59,7 @@ jobs:
       run: python -m pip install cibuildwheel==2.16.2
     - name: Build cocoex wheel
       shell: bash
-      run: python -m cibuildwheel --output-dir dist/ coco_experiment-*.tar.gz
+      run: python -m cibuildwheel --print-build-identifiers --output-dir dist/ coco_experiment-*.tar.gz
       env:
         CIBW_PRERELEASE_PYTHONS: True
         CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
