--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -22,7 +22,7 @@ jobs:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-14, macosx_x86_64]
+          - [macos-14, macosx_arm64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python:
@@ -63,7 +63,6 @@ jobs:
       env:
         CIBW_PRERELEASE_PYTHONS: True
         CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
-        CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=10.15
         CIBW_BUILD_VERBOSITY: 2
     - name: Archive Python wheels
       uses: actions/upload-artifact@v4
