--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -72,16 +72,14 @@ jobs:
   
   python-wheels-test:
     needs: python-wheels-build
-    if: |
-      ${{ inputs.build_only == 'false' }} &&
-      ( success() || failure() )
+    if: ${{ inputs.build_only == 'false' }}
     strategy:
       fail-fast: false
       matrix:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-14, macosx_x86_64]
+          - [macos-14, macosx_arm64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python: ["3.9", "3.10", "3.11", "3.12"]
@@ -120,16 +118,14 @@ jobs:
   
   python-wheels-example:
     needs: python-wheels-build
-    if: |
-      ${{ inputs.build_only == 'false' }} &&
-      ( success() || failure() )
+    if: ${{ inputs.build_only == 'false' }}
     strategy:
       fail-fast: false
       matrix:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-14, macosx_x86_64]
+          - [macos-14, macosx_arm64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python: ["3.9", "3.10", "3.11", "3.12"]
