--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -1,6 +1,13 @@
 name: test-python
 
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      build_only:
+        description: "only run wheel builds job"
+        required: false
+        default: 'false'
+        type: string
 
 jobs:
   python-wheels-build:
@@ -15,7 +22,7 @@ jobs:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-14, macosx_x86_64]
+          - [macos-14, macosx_arm64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python:
@@ -56,6 +63,7 @@ jobs:
       env:
         CIBW_PRERELEASE_PYTHONS: True
         CIBW_BUILD: ${{ matrix.python[0] }}-${{ matrix.buildplat[1] }}
+        CIBW_BUILD_VERBOSITY: 2
     - name: Archive Python wheels
       uses: actions/upload-artifact@v4
       with:
@@ -64,14 +72,14 @@ jobs:
   
   python-wheels-test:
     needs: python-wheels-build
-    if: success() || failure()
+    if: ${{ inputs.build_only == 'false' }}
     strategy:
       fail-fast: false
       matrix:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-14, macosx_x86_64]
+          - [macos-14, macosx_arm64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python: ["3.9", "3.10", "3.11", "3.12"]
@@ -110,14 +118,14 @@ jobs:
   
   python-wheels-example:
     needs: python-wheels-build
-    if: success() || failure()
+    if: ${{ inputs.build_only == 'false' }}
     strategy:
       fail-fast: false
       matrix:
         buildplat:
           - [ubuntu-20.04, manylinux_x86_64]
           - [ubuntu-20.04, musllinux_x86_64]
-          - [macos-14, macosx_x86_64]
+          - [macos-14, macosx_arm64]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
         python: ["3.9", "3.10", "3.11", "3.12"]
@@ -152,7 +160,7 @@ jobs:
   merge-python-wheels:
     runs-on: ubuntu-latest
     needs: [python-wheels-test, python-wheels-example]
-    if: success() || failure()
+    if: always()
     steps:
       - name: Merge Artifacts
         uses: actions/upload-artifact/merge@v4
@@ -163,6 +171,7 @@ jobs:
 
   python-lint:
     runs-on: "ubuntu-latest"
+    if: ${{ inputs.build_only == 'false' }}
     steps:
     - uses: actions/download-artifact@v4
       with:
