--- a/.github/workflows/source_build.yml
+++ b/.github/workflows/source_build.yml
@@ -4,7 +4,7 @@ on: workflow_call
 
 jobs:
   source-build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
     - uses: actions/checkout@v4
       with:
